# AutoPwn

./: README.md  autopwn.py  link-source-code.txt  plan.txt  requirements.txt  timeline.txt  venv_usage.txt
AutoPwn/nlp_engine/: DOCS_PROGRESS.md
AutoPwn/nlp_engine/module2/: CMakeLists.txt  chall  chall_patched  hook.c  runner.py  solve.py
benchmarks/: README.md  babyheap_patched  challenges.json  solve.py
benchmarks/0ctf-2017-babyheap/: solve.py
benchmarks/0xfun-67/: chall
benchmarks/amateurs-ctf-2024-heaps-of-fun/: solve.py
benchmarks/backdoor-ctf-2021-babyheap/: solve.py
benchmarks/defcon-quals-2019-babyheap/: solve.py
benchmarks/justCTF-2025-babyheap/: solve.py
benchmarks/picoctf-2024-heap3/: solve.py
benchmarks/scripts/: evaluate.py  run_benchmark.py
core/: technique_matcher.py
core/analysis/: bug_detector.py  chunk_prober.py  environment.py  target_discovery.py
core/artifacts/: critical_vars.json  execution_results.json  generalized_actions.json  interface_map.json  symbolic_results.json  taint_results.json  trace_events.json  verification_report.json
core/capabilities/: deriver.py  models.py
core/codegen/: capability_codegen.py  synthesizer.py
core/executor/: capability_verifier.py  feedback_loop.py
data/: parsed_techniques.json
docs/: AUTOPWN.md  HUONG_DAN_WRITEUP.md  KNOWLEDGE_BASE.md  RUNBOOK.md
nlp_engine/: extract_vars.py  requirements.txt
report/: ActivityFlow.md  Architecture.md  Conclusion.md  Context.md  Evaluation.md  Functionality.md  Purpose.md  Scope.md  StateMachine.md  UseCase.md  report.tex
(+71 files in other folders)
